# neptune

./: .gitignore  .gitmodules  README.md  __init__.py  pyproject.toml  run.py
configs/: train_background_classifier.cfg  train_background_classifier_micro.cfg  train_background_classifier_mini.cfg  train_deposited_energy_reco_medium.cfg  train_direction.cfg  train_direction_fast_test.cfg  train_direction_micro.cfg  train_morphology_classifier_medium.cfg  train_morphology_classifier_micro.cfg  train_neptune.cfg  train_starting_classifier.cfg  train_visible_energy_medium.cfg  train_visible_inelasticity.cfg
dataloaders/: __init__.py  data_utils.py  icecube_parquet.py  prometheus.py
examples/: README.md  loss_functions.py  neptune_lightning.py  prometheus_data.py  prometheus_dataloader.py  run.py  trainer.py
examples/configs/: icecube_angular_reco.cfg  prometheus_angular_reco.cfg  prometheus_energy_reco.cfg  prometheus_pulse_angular_reco.cfg  prometheus_pulse_energy_reco.cfg
examples/dataloaders/: __init__.py  data_utils.py  icecube.py  prometheus.py
models/: __init__.py  neptune.py  transformer_layers.py
neptune/: __init__.py  model.py  packing.py  tokenizer.py  transformers.py
neptune/dataloaders/: data_utils.py  icecube_parquet.py
neptune/models/: neptune.py  transformer_layers.py
neptune/utils/: __init__.py  utils.py
scripts/: README.md  fix_filenames.py  ledger  loss_functions.py  noise.py  preshuffle.py  run.py  trainer.py
scripts/configs/: i3_angular_reco.cfg  i3_classification.cfg  (+17 more)
utils/: __init__.py  fb_losses.py  sh_loss.py  utils.py
(+6 files in other folders)
